Added fingerprint library

--- a/JoystickIMUDemo/platformio.ini
+++ b/JoystickIMUDemo/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit ICM20X@^2.0.7
 	adafruit/Adafruit ADS1X15@^2.5.0
+	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
