Renamed ROS environment and build flag

--- a/Joystick/platformio.ini
+++ b/Joystick/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 build_flags =
     -D DEBUG
 
-[env:communication]
+[env:ROS]
 platform = raspberrypi
 board = pico
 framework = arduino
@@ -27,7 +27,7 @@ lib_deps =
     SPI
     https://github.com/micro-ROS/micro_ros_platformio
 build_flags =
-    -D COMM
+    -D ROS
 
 board_microros_distro = humble
 board_microros_transport = serial
