Added debug environment and fix microRos on regular

--- a/Joystick/platformio.ini
+++ b/Joystick/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 lib_deps =
     adafruit/Adafruit ADS1X15@^2.5.0
     SPI
-
+build_flags =
 
 [env:debug]
 platform = raspberrypi
