Got the subscriber working and added debug mode

--- a/SubscriberDemo/platformio.ini
+++ b/SubscriberDemo/platformio.ini
@@ -18,3 +18,14 @@ lib_deps =
 board_microros_distro = humble
 board_microros_transport = serial
 
+[env:debug]
+platform = raspberrypi
+board = pico
+framework = arduino
+lib_deps =
+    https://github.com/micro-ROS/micro_ros_platformio
+build_flags =
+    -D DEBUG
+
+board_microros_distro = humble
+board_microros_transport = serial
