--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -19,7 +19,6 @@ jobs:
           python-version: '3.11'
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
-      - name: Enter Joystick Folder
-        run: cd Joystick
       - name: Build PlatformIO Project
         run: pio run
+        working-directory: Joystick
