--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -19,6 +19,8 @@ jobs:
           python-version: '3.11'
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
+      - name: Create PlatformIO Environment
+        run: platformio system init --projects Joystick
       - name: Build PlatformIO Project
         run: pio run
         working-directory: Joystick
