--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install PlatformIO Core
-        run: pip install --upgrade platformio
+        run: python -m pip install --upgrade platformio
       - name: Build PlatformIO Project
         run: pio run
         working-directory: Joystick
