--- a/Joystick/platformio.ini
+++ b/Joystick/platformio.ini
@@ -14,6 +14,7 @@ board = pico
 framework = arduino
 lib_deps =
     adafruit/Adafruit ADS1X15@^2.5.0
+    adafruit/Adafruit ICM20X@^2.0.7
     SPI
 build_flags =
 
@@ -23,6 +24,7 @@ board = pico
 framework = arduino
 lib_deps =
 	adafruit/Adafruit ADS1X15@^2.5.0
+    adafruit/Adafruit ICM20X@^2.0.7
     SPI
 build_flags =
     -D DEBUG
@@ -33,6 +35,7 @@ board = pico
 framework = arduino
 lib_deps =
     adafruit/Adafruit ADS1X15@^2.5.0
+    adafruit/Adafruit ICM20X@^2.0.7
     SPI
     https://github.com/micro-ROS/micro_ros_platformio
 build_flags =
