--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -27,4 +27,4 @@ jobs:
           ln -s ~/.platformio/penv/bin/piodebuggdb /usr/local/bin/piodebuggdb
       - name: Build PlatformIO Project
         run: pio run
-        working-directory: Joystick
+        working-directory: MainCode
