--- a/MicrocontrollerCode/platformio.ini
+++ b/MicrocontrollerCode/platformio.ini
@@ -48,3 +48,19 @@ build_flags =
 
 board_microros_distro = humble
 board_microros_transport = serial
+
+[env:ROS-Debug]
+platform = raspberrypi
+board = pico
+framework = arduino
+lib_deps =
+    adafruit/Adafruit ADS1X15@^2.5.0
+    adafruit/Adafruit ICM20X@^2.0.7
+    adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
+    SPI
+    https://github.com/micro-ROS/micro_ros_platformio
+build_flags =
+    -D ROS_DEBUG
+
+board_microros_distro = humble
+board_microros_transport = serial
