--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -28,3 +28,10 @@ jobs:
       - name: Build PlatformIO Project
         run: pio run -e regular -e ROS
         working-directory: MicrocontrollerCode
+      - name: Upload firmware artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware-builds
+          path: |
+            MicrocontrollerCode/.pio/build/ROS/firmware.uf2
+          if-no-files-found: warn
