--- a/.github/workflows/Platformio_CI.yml
+++ b/.github/workflows/Platformio_CI.yml
@@ -28,10 +28,9 @@ jobs:
       - name: Build PlatformIO Project
         run: pio run -e regular -e ROS
         working-directory: MicrocontrollerCode
-      - name: Upload firmware artifacts
+      - name: Upload firmware
         uses: actions/upload-artifact@v4
         with:
-          name: firmware-builds
-          path: |
-            MicrocontrollerCode/.pio/build/ROS/firmware.uf2
+          name: firmware.uf2
+          path: MicrocontrollerCode/.pio/build/ROS/firmware.uf2
           if-no-files-found: warn
